--- a/SAGA/runner_scheduler/sqlc.yaml
+++ b/SAGA/runner_scheduler/sqlc.yaml
@@ -14,4 +14,18 @@ sql:
         emit_exact_table_names: false
         emit_empty_slices: true
         emit_pointers_for_null_types: true
+  - engine: "postgresql"
+    queries: "queries/worker_queries.sql"
+    schema: "schema.sql"
+    gen:
+      go:
+        package: "worker"
+        out: "internal/infrastructure/repository/queries/worker"
+        sql_package: "pgx/v5"
+        emit_json_tags: true
+        emit_prepared_queries: false
+        emit_interface: true
+        emit_exact_table_names: false
+        emit_empty_slices: true
+        emit_pointers_for_null_types: true
 
